发现在搜索的时候有报错，先提交上去，后续修改前端